# Pocket

./: CMakeLists.txt  ideas.md  imgui.ini  notes.md  pocket.natvis  test.ini
asset-importer/: CMakeLists.txt  main.cc
assets/: triangle.frag  triangle.vert
assets/imported/: default.tx  lost_empire-Alpha.tx  lost_empire-RGB.tx  lost_empire-RGBA.tx  monkey_flat.mesh  monkey_smooth.mesh  triangle.mesh
assets/shaders/: mesh-shader.frag  mesh-shader.mesh  mesh.vert  triangle.frag
assets/shaders/spv/: mesh-shader.frag.spv  mesh-shader.mesh.spv  mesh.vert.spv  triangle.frag.spv
shaders/: mesh.vert  mesh.vert.spv  triangle.frag  triangle.frag.spv  triangle.vert  triangle.vert.spv
src/: CMakeLists.txt  main.cc  main.cpp  mesh.cpp  mesh.h  utils.cpp  utils.h  vk_engine.cpp  vk_engine.h  vk_initializers.h  vk_textures.cpp  vk_textures.h  vk_types.h
src/assets/: asset.h  asset_manager.cc  asset_manager.h  buffer.cc  buffer.h  descriptor.cc  descriptor.h  texture.cc  texture.h
src/core/: coroutine.cc  coroutine.h  guid.h  handle.h  input.cc  input.h  thread_pool.cc  thread_pool.h
src/formats/: assets.cc  assets.h  ini.c  ini.cc  ini.h  xml.c  xml.h
src/gfx/: buffer.cc  buffer.h  camera.cc  camera.h  descriptor.cc  descriptor.h  descriptor_cache.cc  descriptor_cache.h  engine.cc  engine.h  mesh.cc  mesh.h  pipeline_builder.cc  pipeline_builder.h  profiler.cc  profiler.h  shader.cc  shader.h  vk_engine.cpp  vk_fwd.h  vk_ptr.h
src/std/: arena.cc  arena.h  arr.h  asio.cc  asio.h  callstack.cc  callstack.h  common.h  delegate.h  file.cc  file.h  filesystem.cc  filesystem.h  hash.cc  hash.h  hashmap.h  hashset.h  logging.cc  logging.h  maths.h  mem.h  pair.h  slice.h  str.cc  str.h  stream.cc  stream.h  threads.cc  threads.h  vec.h  vmem.cc  vmem.h
src/utils/: callstack.cc  callstack.h  glm.h  sort.cc  sort.h  tracy_helper.cc  tracy_helper.h
